[tool.poetry]
name = "spotify-streamlit"
version = "0.1.0"
description = ""
authors = ["Skyler Carlson <skylercarlson28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pandas = "^2.1.3"
plotly = "^5.18.0"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
